2009-08-10  Chris Toshok  <toshok@ximian.com>

	* BrowserHttpWebRequestInternal.cs: make progress_delegate
	internal so BrowserHttpWebRequest can set it.

	* BrowserHttpWebRequest.cs (GetResponse): pass along our progress
	delegate to the internal webrequest.

2009-07-21  Sebastien Pouliot  <sebastien@ximian.com>

	* ClientAccessPolicyParser.cs, FlashCrossDomainPolicyParser.cs:
	Silverlight accepts policies from (invalid) XML stream that starts
	with whitespaces.

2009-06-18  Sebastien Pouliot  <sebastien@ximian.com>

	* BaseDomainPolicy.cs: Use SourceUri instead of (removed) RootUri

2009-06-10  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: SL does not follow RFC2616 for 301 
	and will redirect on GET too.
	* ClientAccessPolicy.cs: Do not allow '%', ".." or "./" in cross
	domain URL since this is "often" the case (see MS bug URL). Fix
	local path matching and throw if a policy resource path is empty.
	* FlashCrossDomainPolicy.cs: Remove AllowAccessFromIdentity and 
	allow site-control when set to 'by-ftp-filename'.
	* FlashCrossDomainPolicyParser.cs: Throw if a boolean value is not 
	'true' or 'false'. Remove code from "allow-access-from-identity"
	since this is not supported by Silverlight.

2009-06-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequestInternal.cs: Override Headers so this internal
	class does not have to deal with the extra restriction (like it's
	caller needs to). Fix regressed DRT #859, 860 and 887
	* ClientAccessPolicy.cs: Remove unused AllowAllHeaders (it's now 
	part of the Headers nested class)

2009-06-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* BrowserHttpWebRequestInternal.cs: Don't check headers here, it's
	the parent job to do so and it can also add some restricted ones.

2009-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BrowserHttpWebRequest.cs: Split in two. This part deals with SL
	specific behavior, like downloading cross-domain policies and http