@@ -1,3 +1,12 @@
+2009-08-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Page.xaml.cs: Add test cases when invalid *path* characters are
+	used in the qeury part of the URI. Remove Unsure466043 since we
+	now use the same (or more similar) SL logic for the "don't care
+	special case" on unrestricted paths.
+
+	re: alan
+
 2009-07-21  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Global.asax: Add test case for both flash and silverlight 
